# AED-Airplanes

./: .gitignore  CMakeLists.txt  README.md  airlines.csv  airports.csv  flights.csv  students_classes.csv
Dados/Testes/: flights.csv
src/: Airlines.cpp  Airlines.h  Airport.cpp  Airport.h  Class_Hour.cpp  Class_Hour.h  Data.cpp  Data.h  Filereader.cpp  Filereader.h  Graph.cpp  Graph.h  GraphC.cpp  GraphC.h  Lecture.cpp  Lecture.h  Menu.cpp  Menu.h  Program_Data.cpp  Program_Data.h  Program_data.cpp  Program_data.h  Student.cpp  Student.h  Timetable.cpp  Timetable.h  Uc.cpp  Uc.h  class.cpp  class.h  class_change.cpp  class_change.h  lecture.cpp  lecture.h  main.cpp  overloads.cpp  overloads.h  student.h  timetable.cpp  timetable.h  (+3 more)
